# machine_learning

./: .gitignore  README.md  descriptor.py  dropout_test.py  lr.py  main.py  metrics.py  pyproject.toml  regul.py  requirements.txt
GANs/: gan_demo.py
K-Nearest_neighbor/: knn_from_scratch.ipynb  knn_from_scratch.md  knn_from_scratch.py
K-means/: k_means_from_scratch.ipynb  k_means_from_scratch.md
SVM/: SVM and SMO.ipynb  gaussiandata.pickle  support_vector_machine_from_scratch.ipynb  support_vector_machine_from_scratch.md
batch_normalization/: bn_test.py  bn_visual.py
decision_tree/: decision_tree.ipynb  decision_tree.md
distillation/: distillation_demo.py
gru/: README.md  main.py  pyproject.toml  test_gru_cell.py  test_lstm_cell.py  train_adding.py  train_copy.py
gru/cells/: __init__.py  gru_cell.py  lstm_cell.py  rnn_cell.py
gru/models/: __init__.py  (+1 more)
layer_normalization/: config.py  data.py  evaluate.py  model.py  run_ablation.py  train.py  visualize.py
lda/: lda_scratch.ipynb  lda_scratch.md
lr/: run_lr_comp.py  run_step_decay.py
naive_bayes/: 2020-11-05-Naive Bayes Classifier.md  naive_bayes.ipynb  naive_bayes.md  naive_bayes_scratch.py  naive_bayes_sklearn.ipynb  naive_bayes_sklearn.md
pca/: pca_from_scratch.ipynb  pca_from_scratch.md
random_forest/: bootstrap_demp.ipynb  bootstrap_demp.md  decision_tree.py  random_forest.py  rs_scratch.ipynb
simclr/: readme.md  simclr_concepts_demo.py  simclr_demo.py  simclr_tutorial.ipynb  simclr_tutorial.py
vit/: VIT_README.md  ViT_Architecture.canvas  Vision_Transformer_Guide.md  vit_demo.py
(+14 files in other folders)
