[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "torchvision",
    "matplotlib",
    "tqdm",
    "seaborn",
    "scikit-learn",
    "ipdb",
]

[tool.uv]
package = false
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

